Fixed z-index for post edit screens

--- a/assets/css/editor.scss
+++ b/assets/css/editor.scss
@@ -1209,12 +1209,12 @@ input:checked ~ .layotter-row-layout-option {
 
 #dennisbox,
 #dennisbox-modal {
-    z-index: 999990;
+    z-index: 111110;
 
     .dennisbox-overlay {
         cursor: pointer;
         position: fixed;
-        z-index: 999991;
+        z-index: 111111;
         top: 0;
         right: 0;
         left: 0;
@@ -1224,7 +1224,7 @@ input:checked ~ .layotter-row-layout-option {
 
     .dennisbox-content {
         position: absolute;
-        z-index: 999992;
+        z-index: 111112;
         top: 0;
         left: 0;
         right: 0;
@@ -1241,11 +1241,11 @@ input:checked ~ .layotter-row-layout-option {
 
 #dennisbox-modal {
     .dennisbox-overlay {
-        z-index: 999993;
+        z-index: 111113;
     }
 
     .dennisbox-content {
-        z-index: 999994;
+        z-index: 111114;
     }
 }
 
